examples/test/testpolicy13970.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13970
  namespace: namespace428
spec:
  podSelector:
    matchLabels:
      key3: value20
      key36: value29
      key9: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value30
      podSelector:
        matchLabels:
          key36: value31
